Import of PJFL/HTML-FormWidgets-0.10.345 from CPAN.
gitpan-cpan-distribution: HTML-FormWidgets
gitpan-cpan-version:      0.10.345
gitpan-cpan-path:         PJFL/html-formwidgets/HTML-FormWidgets-0.10.345.tar.gz
gitpan-cpan-author:       PJFL
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,12 @@
 Revision history for HTML::FormWidgets
 
+0.10.345 2012-03-03
+         - Added classes hash to PopupMenu
+         - Image class has subtype icon which is a span for background CSS
+         - Renamed UnorderedList to List and added odered option
+         - Updated Moose / Class::MOP / MRO::Compat dependencies
+         - Removed CSS border art for rounded corners from Menu
+
 0.9.336  2011-12-30
          - Added Async widget. Adds a div whose content is loaded via Ajax
 
