--- a/Changes
+++ b/Changes
@@ -1,5 +1,11 @@
 Revision history for HTML::FormWidgets
 
+0.12.351 2012-03-29
+         - Upped min Perl ver to 5.10
+         - Funs over stopping CPAN testing
+         - Updated inc::Bob. Added inc::CPANTesting
+         - Bumped HTML::Accessor version dependency
+
 0.11.347 2012-03-09
          - Fixed Menu padding when there is no content
          - Fixed Rule for Opera by adding "most" class to rest of line
