--- a/Changes
+++ b/Changes
@@ -1,5 +1,13 @@
 Revision history for HTML::FormWidgets
 
+0.13.358 2012-04-19
+         - Turned CPAN testing on
+         - Added more tests
+         - Enhanced H::F::Cloud API
+         - Bumped HTML::Accessor version dependency to 0.7
+         - Updated inc::Bob to 1.3
+         - Updated inc::Bob to 1.2
+
 0.12.351 2012-03-29
          - Upped min Perl ver to 5.10
          - Funs over stopping CPAN testing
